# CSE_5194.02

./: .gitignore  README.md
lab1/DataContainer/: DataContainer.sln
lab1/DataContainer/DataContainer/: DataContainer.vcxproj  DataContainer.vcxproj.filters  Field.cpp  Field.h  Grid.cpp  Grid.h  Solution.cpp  Solution.h  def.h  main.cpp
lab1/NetCDF4/: Makefile  NetCDF4.cpp
lab1/data_container/: CMakeLists.txt  README.md
lab1/data_container/include/: AnalyFunc.h  Field.h  Grid.h  Solution.h
lab1/data_container/input/: task1_random.txt  task1_random_value.txt  task2_plane.txt  task2_random.txt  task2_random_value.txt
lab1/data_container/output/: task2_random_value.txt
lab1/data_container/src/: AnalyFunc.cpp  Field.cpp  Grid.cpp  Solution.cpp  main.cpp
lab2/.ipynb_checkpoints/: lab2-checkpoint.ipynb
lab2/MyVolumeRender/MyVolumeRender/: MyVolumeRender.vcxproj  MyVolumeRender.vcxproj.filters  glad.c  main.cpp
lab2/MyVolumeRender/TF1D/: heart.TF1D  mantle-1.TF1D  mantle-2.TF1D  mantle-256.TF1D  mantle-512.TF1D
lab2/volume_renderer/: CMakeLists.txt  README.md
lab2/volume_renderer/TF1D/: heart-200.TF1D  mantle-256.TF1D  mantle-512.TF1D
lab2/volume_renderer/shader/: raycasting.fs
lab2/volume_renderer/src/: main.cpp
lab4/DataContainer/DataContainer/: AnalyFunc.cpp  AnalyFunc.h  DataContainer.vcxproj  DataContainer.vcxproj.filters  Grid.cpp  Grid.h  Solution.cpp  Solution.h  StreamlineRenderer.cpp  StreamlineRenderer.h  cnpy.h  main.cpp
lab4/DataContainer/input/: seeds.txt  tornado_readme.txt
lab4/DataContainer/output/: streamline.ipynb  tornado_vorticity-512.TF1D
lab4/Streamline/: Streamline.sln
(+12 files in other folders)
